add get all users method
